# camera-mover-sdk

./: Cargo.toml  README.md
src/: camera_state.rs  controls.rs  logger.rs  main.rs  mcap_replay.rs
