[package]
name = "camera-mover-sdk"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.9"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4.5"
env_logger = "0.11"
foxglove = "0.4.1"
futures = "0.3"
keyboard-types = "0.7.0"
parking_lot = "0.12"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
termion = "2.0.1"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
